[tool.poetry]
name = "ai-learning-game"
version = "0.1.0"
description = ""
authors = ["szymon-sicinski <szym.sicinski@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pygame = "^2.5.2"
pytest = "^7.4.3"
coverage = "^7.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
